rlang/tests/tests_resources/invalid_tests/invalid_constant.rlang
Constant test := gold @ cave
Constant test1 := (-12)--3++-2
Constant test3 := 1.2Effect a:
Constant test4 := -= 1